--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,6 +22,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
+$max-width: 400px;
 
 
 
@@ -39,7 +40,10 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  duckcoin:   #df4932
+  duckcoin: (
+    base: #df4932,
+    contrast: #fff
+  )
 );
 
 
