--- a/src/pages/mining/mining.scss
+++ b/src/pages/mining/mining.scss
@@ -1,3 +1,8 @@
-page-about {
+page-mining {
+
+ion-content {
+  background: url('../assets/imgs/mining_bg_1.png') center center;
+  background-size: cover;
+}
 
 }
