--- a/src/pages/mining/mining.scss
+++ b/src/pages/mining/mining.scss
@@ -1,7 +1,7 @@
 page-mining {
 
 ion-content {
-  background: url('../assets/imgs/mining_bg_1.png') center center;
+  background: url('../assets/imgs/mining_bg_1.jpg') center center no-repeat;
   background-size: cover;
 }
 
