--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,8 +23,11 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 $max-width: 400px;
-
-
+$tabs-ios-tab-color-active:#df4932;
+$tabs-md-tab-color-active:#df4932;
+$fab-ios-background-color:#df4932;
+$fab-md-background-color:#df4932;
+$fab-ios-list-button-text-color:#df4932;
 
 // Named Color Variables
 // --------------------------------------------------
